0.0.2 / 2015-01-23

* Enhancements

  * bin/geocode_records table_name - extremely basic CLI

0.0.1 / 2015-01-23

initial release!